--- a/uj/zajecia/25-26z/klc3/lectures/grammar/1/index.html
+++ b/uj/zajecia/25-26z/klc3/lectures/grammar/1/index.html
@@ -96,4 +96,57 @@
 	<li>e.g. 할머니, 어머니가 어디에 있어요?</li>
 </ul>
 
+<h2>숙제</h2>
+
+<ol>
+	<li>
+		삼촌, 어머니가 아버지를 데리고 오라고 얘기하는데요.<br>
+		삼촌, 어머니<strong class="correct">께서</strong> 아버지를 <strong class="correct">모시고</strong> 오<strong class="correct">시</strong>라고 얘기하<strong class="correct">시</strong>는데요.
+	</li>
+	<li>
+		누나는 물을 것이 있다며 할머니 집에 갔다.<br>
+		누나는 <strong class="correct">여쭐</strong> 것이 있다며 할머니 <strong class="correct">댁</strong>에 갔다.
+	</li>
+	<li>
+		나이가 많은 할머니는 홍시를 잘 잡숴요.<br>
+		<strong class="correct">연세</strong>가 많<strong class="correct">으신</strong> 할머니<strong class="correct">께서</strong>는 홍시를 잘 잡<strong class="correct">수세요/수셔요</strong>.
+	</li>
+	<li>
+		어머니가 몹시 피곤했는지 거실에서 잡니다.<br>
+		어머니<strong class="correct">께서</strong> 몹시 피곤<strong class="correct">하셨</strong>는지 거실에서 <strong class="correct">주무십</strong>니다.
+	</li>
+	<li>
+		선생님이 교무실로 오래.<br>
+		선생님<strong class="correct">께서</strong> 교무실로 오<strong class="correct">라셔</strong>.
+	</li>
+	<li>
+		우리 할아버지의 이가 여전히 튼튼해요.<br>
+		우리 할아버지의 <strong class="correct">치아</strong>가 여전히 튼튼<strong class="correct">하세요/하셔요</strong>.
+	</li>
+	<li>
+		할아버지가 허리가 아프다.<br>
+		할아버지<strong class="correct">께서</strong> 허리가 아프<strong class="correct">시</strong>다.
+	</li>
+	<li>
+		철수의 어머닌 우리를 초대했어요.<br>
+		철수의 어머<strong class="correct">니께선</strong> 우리를 초대<strong class="correct">하셨</strong>어요.
+	</li>
+	<li>
+		주문하신 녹차가 나오셨습니다.<br>
+		주문하신 녹차가 나<strong class="correct">왔</strong>습니다.
+	</li>
+	<li>
+		그 청바지는 2만 8천원이세요.<br>
+		그 청바지는 2만 8천원이<strong class="correct">에</strong>요.
+	</li>
+	<li>
+		할아버지가 아버지에게 선물을 주었다.<br>
+		할아버지<strong class="correct">께서</strong> 아버지에게 선물을 주<strong class="correct">셨</strong>다.
+	</li>
+	<li>
+		나는 아직 교수의 이름을 기억하고 있어요.<br>
+		나는 아직 교수<strong class="correct">님</strong>의 <strong class="correct">성함</strong>을 기억하고 있어요.
+	</li>
+</ol>
+
 </body></html>
