--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/5/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/5/index.html
@@ -174,141 +174,141 @@
 	</tr>
 </table>
 
-<!-- <h3>食자로 끝나는 단어</h3> -->
+<h3>一자로 끝나는 단어</h3>
 
-<!-- <table class="hanja"> -->
-	<!-- <tbody> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-1"><abbr title="">間</abbr></td> -->
-			<!-- <td class="hanja-related-2"><abbr title="">穀</abbr></td> -->
-			<!-- <td class="hanja-related-3"><abbr title="">粉</abbr></td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-10"><abbr title="">會</abbr></td> -->
-			<!-- <td class="hanja-core" rowspan="2">食</td> -->
-			<!-- <td class="hanja-related-4"><abbr title="">洋</abbr></td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-9"><abbr title="">菜</abbr></td> -->
-			<!-- <td class="hanja-related-5"><abbr title="">後</abbr></td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-8"><abbr title="">飮</abbr></td> -->
-			<!-- <td class="hanja-related-7"><abbr title="">外</abbr></td> -->
-			<!-- <td class="hanja-related-6"><abbr title="">過</abbr></td> -->
-		<!-- </tr> -->
-	<!-- </tbody> -->
-<!-- </table> -->
+<table class="hanja">
+	<tbody>
+		<tr>
+			<td class="hanja-related-1"><abbr title="만 만">萬</abbr></td>
+			<td class="hanja-related-2"><abbr title="차레 제">第</abbr></td>
+			<td class="hanja-related-3"><abbr title="한가지 동">同</abbr></td>
+		</tr>
+		<tr>
+			<td class="hanja-related-10"><abbr title="그을 획">劃</abbr></td>
+			<td class="hanja-core" rowspan="2"><abbr title="하나 일"></abbr>一</td>
+			<td class="hanja-related-4"><abbr title="오직 유">唯</abbr></td>
+		</tr>
+		<tr>
+			<td class="hanja-related-9"><abbr title="가릴 택">擇</abbr></td>
+			<td class="hanja-related-5"><abbr title="홑 단">單</abbr></td>
+		</tr>
+		<tr>
+			<td class="hanja-related-8"><abbr title="대할 대">對</abbr></td>
+			<td class="hanja-related-7"><abbr title="고를 균">均</abbr></td>
+			<td class="hanja-related-6"><abbr title="거느릴 통">統</abbr></td>
+		</tr>
+	</tbody>
+</table>
 
-<!-- <ol> -->
-	<!-- <li>간식 間食 -->
-		<!-- <ul> -->
-			<!-- <li>사이 간</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/8ce8fc579f84443e9c9a1eb63d1a5420">https://hanja.dict.naver.com/#/entry/ccko/8ce8fc579f84443e9c9a1eb63d1a5420</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>곡식 穀食 -->
-		<!-- <ul> -->
-			<!-- <li>곡식 곡</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/12c9d6b526a94a5f97e87630903b755f">https://hanja.dict.naver.com/#/entry/ccko/12c9d6b526a94a5f97e87630903b755f</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>분식 粉食 -->
-		<!-- <ul> -->
-			<!-- <li>가루 분</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/6c14ae61be0743f2925cdd273bdec49c">https://hanja.dict.naver.com/#/entry/ccko/6c14ae61be0743f2925cdd273bdec49c</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>양식 洋食 -->
-		<!-- <ul> -->
-			<!-- <li>큰 바다 양</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/622f650487fa4b839934a758509216f7">https://hanja.dict.naver.com/#/entry/ccko/622f650487fa4b839934a758509216f7</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>후식 後食 -->
-		<!-- <ul> -->
-			<!-- <li>뒤 후</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b">https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>과식 過食 -->
-		<!-- <ul> -->
-			<!-- <li>지날 과</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/20c2b9490e2e4592a4cc71d73a301d91">https://hanja.dict.naver.com/#/entry/ccko/20c2b9490e2e4592a4cc71d73a301d91</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>외식 外食 -->
-		<!-- <ul> -->
-			<!-- <li>바깥 외</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/2cb854535fe749a2b423285de2a1b2fe">https://hanja.dict.naver.com/#/entry/ccko/2cb854535fe749a2b423285de2a1b2fe</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>음식 飮食 -->
-		<!-- <ul> -->
-			<!-- <li>마실 음</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/b3902620d8194b78a410ce98ad7fa0f0">https://hanja.dict.naver.com/#/entry/ccko/b3902620d8194b78a410ce98ad7fa0f0</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>채식 菜食 -->
-		<!-- <ul> -->
-			<!-- <li>나물 채</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5053807435c4d9f9e6c8b525c77fd1e">https://hanja.dict.naver.com/#/entry/ccko/c5053807435c4d9f9e6c8b525c77fd1e</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>회식 會食 -->
-		<!-- <ul> -->
-			<!-- <li>모일 회</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/cb2acc8d3b3e4005a489823975ce3094">https://hanja.dict.naver.com/#/entry/ccko/cb2acc8d3b3e4005a489823975ce3094</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-<!-- </ol> -->
+<ol>
+	<li>만일 萬一
+		<ul>
+			<li>萬 만 만</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/218a0ce124d0496f84630238ba5860fa">https://hanja.dict.naver.com/#/entry/ccko/218a0ce124d0496f84630238ba5860fa</a></li>
+		</ul>
+	</li>
+	<li>제일 第一
+		<ul>
+			<li>第 차레 제</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/75958d64c0a348d180642c75b8a828fb">https://hanja.dict.naver.com/#/entry/ccko/75958d64c0a348d180642c75b8a828fb</a></li>
+		</ul>
+	</li>
+	<li>동일 同一
+		<ul>
+			<li>同 한가지 동</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/52d64766f606488895df8c432d07b7e8">https://hanja.dict.naver.com/#/entry/ccko/52d64766f606488895df8c432d07b7e8</a></li>
+		</ul>
+	</li>
+	<li>유일 唯一
+		<ul>
+			<li>唯 오직 유</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/386affca44e846ae84f8f15d1aed1fda">https://hanja.dict.naver.com/#/entry/ccko/386affca44e846ae84f8f15d1aed1fda</a></li>
+		</ul>
+	</li>
+	<li>단일 單一
+		<ul>
+			<li>單 홑 단</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/868ba4fe508e43a0a747c33b793d9d96">https://hanja.dict.naver.com/#/entry/ccko/868ba4fe508e43a0a747c33b793d9d96</a></li>
+		</ul>
+	</li>
+	<li>통일 統一
+		<ul>
+			<li>統 거느릴 통</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/6398b97103bf4eb5bf98843556089db8">https://hanja.dict.naver.com/#/entry/ccko/6398b97103bf4eb5bf98843556089db8</a></li>
+		</ul>
+	</li>
+	<li>균일 均一
+		<ul>
+			<li>均 고를 균</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/61fbfe5aefc041509f23baf841ef7c39">https://hanja.dict.naver.com/#/entry/ccko/61fbfe5aefc041509f23baf841ef7c39</a></li>
+		</ul>
+	</li>
+	<li>일대일 一對一
+		<ul>
+			<li>對 대할 대</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/b1493a3a746747babd5ce66b34d8adf7">https://hanja.dict.naver.com/#/entry/ccko/b1493a3a746747babd5ce66b34d8adf7</a></li>
+		</ul>
+	</li>
+	<li>택일 擇一
+		<ul>
+			<li>擇 가릴 택</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/f25a76d66b3c4d708b3cc511abb7f628">https://hanja.dict.naver.com/#/entry/ccko/f25a76d66b3c4d708b3cc511abb7f628</a></li>
+		</ul>
+	</li>
+	<li>획일 劃一
+		<ul>
+			<li>劃 그을 획</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/dd1ca97edbab4197a5b1fc73e1f33b98">https://hanja.dict.naver.com/#/entry/ccko/dd1ca97edbab4197a5b1fc73e1f33b98</a></li>
+		</ul>
+	</li>
+</ol>
 
-<!-- <table> -->
-	<!-- <thead> -->
-		<!-- <th>한자어</th> -->
-		<!-- <th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th> -->
-	<!-- </thead> -->
-	<!-- <tr> -->
-		<!-- <td>間食</td> -->
-		<!-- <td>(견과류, 시험, 공부하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>穀食</td> -->
-		<!-- <td>(농부, 밀과 보리, 거두다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>粉食</td> -->
-		<!-- <td>(불닭볶음면, 전세계, 인기)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>洋食</td> -->
-		<!-- <td>(한국 청소년, 맥도날드, 즐겨먹다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>後食</td> -->
-		<!-- <td>(한국인, 식사, 커피)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>過食</td> -->
-		<!-- <td>(비만, 벗어나다, 자제하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>外食</td> -->
-		<!-- <td>(폴란드, 한국, 비하다, 자주 하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>飮食</td> -->
-		<!-- <td>(스트레스, 해소하다, 맵다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>菜食</td> -->
-		<!-- <td>(사찰음식, 고기, 야채, 이루어지다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>會食</td> -->
-		<!-- <td>(교수, 학생들, 학기 말)</td> -->
-	<!-- </tr> -->
-<!-- </table> -->
+<table>
+	<thead>
+		<th>한자어</th>
+		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+	</thead>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>()</td>
+	</tr>
+</table>
 
 </body></html>
 
