--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/index.html
@@ -19,7 +19,7 @@
 	<h3>[1~2]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
 	<h4>1. 형은 차가워 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 마음은 따뜻하다.</h4>
 	<ol>
-		<li>보여도</li>
+		<li>보여도 <strong class="correct">✓</strong></li>
 		<li>보여야</li>
 		<li>보이다가</li>
 		<li>보이든지</li>
@@ -28,7 +28,7 @@
 <div class="exam-question">
 	<h4>2. 아침에 일찍 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 일곱 시 비행기를 탈 수 있다.</h4>
 	<ol>
-		<li>일어나야</li>
+		<li>일어나야 <strong class="correct">✓</strong></li>
 		<li>일어나려고</li>
 		<li>일어나며</li>
 		<li>일어나더니</li>
@@ -39,7 +39,7 @@
 	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
 	<h4>3. 후배가 한 잘못을 알고 있었지만 미안해할까 봐 <u>모르는 척했다</u>.</h4>
 	<ol>
-		<li>모르는 체했다</li>
+		<li>모르는 체했다 <strong class="correct">✓</strong></li>
 		<li>모르는 듯했다</li>
 		<li>모르는 편이다</li>
 		<li>모르기 마련이다</li>
@@ -49,7 +49,7 @@
 	<h4>4. 먹구름이 몰려오는 걸 보니 비가 <u>올 모양이다</u>.</h4>
 	<ol>
 		<li>오기도 한다</li>
-		<li>올 것만 같다</li>
+		<li>올 것만 같다 <strong class="correct">✓</strong></li>
 		<li>올 리가 없다</li>
 		<li>온 적이 없다</li>
 	</ol>
@@ -62,14 +62,14 @@
 		<li>전기 절약</li>
 		<li>날씨 정보</li>
 		<li>건강 관리</li>
-		<li>화재 예방</li>
+		<li>화재 예방 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
 	<h4>6. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/img/6.png" alt="6"></h4>
 	<ol>
 		<li>컴퓨터</li>
-		<li>냉장고</li>
+		<li>냉장고 <strong class="correct">✓</strong></li>
 		<li>선풍기</li>
 		<li>세탁기</li>
 	</ol>
@@ -78,7 +78,7 @@
 	<h4>7. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/img/7.png" alt="7"></h4>
 	<ol>
 		<li>구입 안내</li>
-		<li>접수 방법</li>
+		<li>접수 방법 <strong class="correct">✓</strong></li>
 		<li>등록 문의</li>
 		<li>주의 사항</li>
 	</ol>
@@ -88,7 +88,7 @@
 	<ol>
 		<li>치과</li>
 		<li>서점</li>
-		<li>미술관</li>
+		<li>미술관 <strong class="correct">✓</strong></li>
 		<li>안경점</li>
 	</ol>
 </div>
@@ -97,7 +97,7 @@
 	<h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h4>
 	<h4>9. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/img/9.png" alt="9"></h4>
 	<ol>
-		<li>주말에는 이용 요금을 더 받는다.</li>
+		<li>주말에는 이용 요금을 더 받는다. <strong class="correct">✓</strong></li>
 		<li>캠핑장은 1년 내내 이용할 수 있다.</li>
 		<li>예약은 이용 당일 홈페이지에서 하면 된다.</li>
 		<li>주차장을 이용하려면 돈을 따로 내야 한다.</li>
@@ -107,7 +107,7 @@
 	<h4>10. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/img/10.png" alt="10"></h4>
 	<ol>
 		<li>여성은 잠보다 운동을 더 중요하게 여긴다.</li>
-		<li>남녀 모두 자는 것을 가장 중요하게 생각한다.</li>
+		<li>남녀 모두 자는 것을 가장 중요하게 생각한다. <strong class="correct">✓</strong></li>
 		<li>아침을 먹는 사람은 여성보다 남성이 더 많다.</li>
 		<li>남성은 밥보다 건강 검진을 더 많이 선택했다.</li>
 	</ol>
@@ -118,7 +118,7 @@
 		<p>카카오가 건강에 도움이 된다는 사실이 새롭게 알려졌다. 카카오에 있는 단백질, 지방, 칼슘과 같은 영양 성분이 감기 예방, 집중력 향상 등에 효과가 있다는 것이다. 그러나 카카오는 그 자체로 먹기가 어려워 일반적으로 초콜릿 형태로 먹는다. 그런데 너무 단 초콜릿은 오히려 건강을 해칠 수 있어 많이 먹는 것은 피해야 한다.</p>
 	</div>
 	<ol>
-		<li>카카오를 먹으면 집중력을 높일 수 있다.</li>
+		<li>카카오를 먹으면 집중력을 높일 수 있다. <strong class="correct">✓</strong></li>
 		<li>초콜릿은 영양 성분이 풍부해서 많이 먹어야 한다.</li>
 		<li>카카오보다 초콜릿 형태로 먹는 것이 건강에 더 좋다.</li>
 		<li>초콜릿의 재료가 카카오라는 사실이 처음으로 알려졌다.</li>
@@ -133,7 +133,7 @@
 		<li>뇌 건강과 손을 움직이는 것은 서로 관계가 없다.</li>
 		<li>우리 몸과 달리 뇌는 간단한 일로 자극받지 않는다.</li>
 		<li>뇌 활동을 위해 익숙한 방법으로 손을 쓰는 것이 더 좋다.</li>
-		<li>자주 사용하지 않던 손을 사용하면 뇌 움직임이 활발해진다.</li>
+		<li>자주 사용하지 않던 손을 사용하면 뇌 움직임이 활발해진다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -147,7 +147,7 @@
 		<p>(라) 나는 그들을 통해 세상을 보고 그들은 나를 통해 한국을 보기 때문이다.</p>
 	</div>
 	<ol>
-		<li>(다)-(가)-(나)-(라)</li>
+		<li>(다)-(가)-(나)-(라) <strong class="correct">✓</strong></li>
 		<li>(다)-(나)-(가)-(라)</li>
 		<li>(라)-(가)-(다)-(나)</li>
 		<li>(라)-(다)-(가)-(나)</li>
@@ -162,7 +162,7 @@
 		<p>(라) 이렇게 시대는 달라져도 국가가 국민의 생각을 들으려는 노력은 계속된다.</p>
 	</div>
 	<ol>
-		<li>(나)-(다)-(가)-(라)</li>
+		<li>(나)-(다)-(가)-(라) <strong class="correct">✓</strong></li>
 		<li>(나)-(라)-(다)-(가)</li>
 		<li>(다)-(나)-(가)-(라)</li>
 		<li>(다)-(라)-(나)-(가)</li>
