--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -229,14 +229,12 @@
 				<th scope="row">1</th>
 				<td>26 lutego 2025</td>
 				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
-				<td class="schedule-lecture">starzenie się społeczeństwa</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1">“병원 싫다” 자택서 눈감은 노모, 가족과 대화 속 떠나</a></td>
+				<td class="schedule-lecture" rowspan="2">starzenie się społeczeństwa</td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1">“병원 싫다” 자택서 눈감은 노모, 가족과 대화 속 떠나</a></td>
 			</tr>
 			<tr>
 				<th scope="row">2</th>
 				<td>5 marca 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
@@ -280,17 +278,17 @@
 				<th scope="row" rowspan="3">8</th>
 				<td rowspan="3">16 kwietnia 2025</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Karolina Tkacz - webtoony</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Sara Skwarko - książka fantastyczna</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Aleksandra Maksylewicz</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
@@ -324,17 +322,17 @@
 				<th scope="row" rowspan="3">12</th>
 				<td rowspan="3">14 maja 2025</td>
 				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Gabriela Barabasz</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Joanna Radwańska - tłumaczenie audiowizualne</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 6</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Anna Kawałek - książka kryminalna</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
@@ -367,22 +365,22 @@
 				<th scope="row" rowspan="4">16</th>
 				<td rowspan="4">11 czerwca 2025</td>
 				<td class="schedule-presentation">Praca domowa 7</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Natalia Gadomska - polityczne podziały w Korei Płd. / posiadanie broni jądrowej przez Koreę Płd. / urbanizacja w Seulu</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 8</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Katarzyna Kloc - fragment komiksu</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 9</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Julia Świegoda - operacje plastyczne podbródka</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 10</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Wiktoria Świt - dzień z życia K-pop trainee</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
@@ -405,7 +403,7 @@
 		<thead>
 			<tr>
 				<th scope="col">Tydzień</th>
-				<th scope="col">Data</th>
+				<th scope="col">Data</th>f
 				<th scope="col">Rodzaj</th>
 				<th scope="col">Temat</th>
 			</tr>
