--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1/index.html
@@ -114,11 +114,29 @@
 <hr class="homework">
 
 <p>3-1. 지난해 4월 고옥임 할머니(당시 94세)는 화장실에 가다 넘어져 다친 뒤</p>
+<ul>
+	<li>W kwietniu ubiegłego roku pani Ko Ogim (wówczas 94 l.) przewróciła się w drodze do toalety i doznała urazu.</li>
+</ul>
 <p>3-2. 움직이기 어려워지자 자녀들에게 이같이 말했다.</p>
+<ul>
+	<li>W związku z tym, że poruszanie stało się dla niej trudne, poinformowała rodzinę o swoim życzeniu.</li>
+</ul>
 <p>4. 낯선 병원보다는 집에서 치료를 받으며 인생의 마지막을 보내겠다는 것이다.</p>
+<ul>
+	<li>Powiedziała, że zamiast leżenia w nieznanym szpitalu woli otrzymać leczenie i doczekać końca swoich dni w domu.
+</ul>
 <p>5-1. 막내딸인 우효순 씨(64)는 인천 부평구와 인천성모병원 권역호스피스센터, 인천평화의료복지사회적협동조합 평화의원이 운영하는 ‘지역사회 생애말기돌봄’ 사업을 접하고</p>
+<ul>
+	<li>Woo Hyosun (64 l.), najmłodsza córka pani Ko, natknęła się na program o nazwie „Lokalna Opieka Paliatywna” prowadzony przez dzielnicę Bupyeong, Regionalne Hospicjum Szpitala Matki Bożej oraz lecznicę należącą do Stowarzyszenia Pokoju na Rzecz Społecznej Współpracy i Opieki Lekarskiej w Incheonie,</li>
+</ul>
 <p>5-2. 어머니의 ‘마지막 소원’을 들어줄 수 있었다.</p>
+<ul>
+	<li>dzięki czemu mogła spełnić ostatnie życzenie swojej matki.</li>
+</ul>
 <p>6. ‘지역사회 생애말기돌봄’ 사업은 환자가 자택 등에서 존엄한 죽음을 맞이할 수 있도록 통증관리, 심리적 돌봄 등을 지원한다.</p>
+<ul>
+	<li>„Lokalna Opieka Paliatywna” wspiera pacjentów m.in. poprzez łagodzenie cierpienia oraz opiekę psychologiczną, aby mogli godnie odejść we własnym domu.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -143,13 +161,22 @@
 <h3>번역</h3>
 
 <p>7. “연명치료 대신 가족과 더 많은 대화를”</p>
+<ul>
+	<li>„Zamiast leczenia podtrzymującego życie więcej rozmów z rodziną”</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
+
 <p>8-1. 지난해 5월 평화의원 의료진은 할머니 댁을 찾아</p>
 <p>8-2. 더 이상의 진료와 투약을 원하지 않는다는 연명치료 중단 의사를 확인했다.</p>
-<p>8-3. 이후 매주 한 차례 이상 할머니 댁을 찾아 통증과 증상을 관리했고</p>
-<p>8-4. 일상생활을 돌보고 가족의 심리적 상태까지 살폈다.</p>
-<p>9. 의료진은 증상을 호전시키는 치료보다 임종까지 편안하게 보낼 수 있게 진통제 등을 처방했다.</p>
-<p>10-1. 엄민정 평화의원 책임간호사는 “할머니가 시원하고 개운함을 느낄 수 있게 머리를 감기거나 이를 닦을 때 도왔다”며</p>
-<p>10-2. “통증을 잠시라도 잊을 수 있도록 한 것”이라고 말했다.</p>
+<p>9-3. 이후 매주 한 차례 이상 할머니 댁을 찾아 통증과 증상을 관리했고</p>
+<p>9-4. 일상생활을 돌보고 가족의 심리적 상태까지 살폈다.</p>
+
+<hr class="homework">
+
+<p>10. 의료진은 증상을 호전시키는 치료보다 임종까지 편안하게 보낼 수 있게 진통제 등을 처방했다.</p>
+<p>11-1. 엄민정 평화의원 책임간호사는 “할머니가 시원하고 개운함을 느낄 수 있게 머리를 감기거나 이를 닦을 때 도왔다”며</p>
+<p>11-2. “통증을 잠시라도 잊을 수 있도록 한 것”이라고 말했다.</p>
 
 <h3>어휘</h3>
 
@@ -164,9 +191,9 @@
 
 <h3>번역</h3>
 
-<p>11. 의료진은 가족들에게 할머니와 더 많은 대화를 하라고 권유했다.</p>
-<p>12. 또 할머니의 침대 주위에 가족 사진을 붙이고 행복했던 순간을 추억하게 만들라고 제안했다.</p>
-<p>13. 우 씨는 침대 곁에 어머니가 젊었을 때 사진과 자신의 어릴 때 사진, 손주들의 사진 등을 붙여 놨다.</p>
+<p>12. 의료진은 가족들에게 할머니와 더 많은 대화를 하라고 권유했다.</p>
+<p>13. 또 할머니의 침대 주위에 가족 사진을 붙이고 행복했던 순간을 추억하게 만들라고 제안했다.</p>
+<p>14. 우 씨는 침대 곁에 어머니가 젊었을 때 사진과 자신의 어릴 때 사진, 손주들의 사진 등을 붙여 놨다.</p>
 
 <h3>어휘</h3>
 
@@ -178,12 +205,12 @@
 
 <h3>번역</h3>
 
-<p>14. 할머니와 우 씨는 사진들을 보며 그동안 가슴 속에 담아 뒀던 모녀의 이야기를 했다.</p>
-<p>15-1. 할머니는 “엄마가 부족해서 미안하다. 잘못한 게 있다면 용서해 달라”고 말했고</p>
-<p>15-2. 우 씨는 “내 엄마라서 늘 고마웠고 사랑한다”고 했다.</p>
-<p>16. 할머니는 지난해 8월 29일 자택에서 눈을 감았다.</p>
-<p>17-1. 임종을 지킨 우 씨는 “좋은 시설에 있는 것보다 가족과 함께 마지막 시간을 보낼 때 마음이 더 편할 것”이라며</p>
-<p>17-2. “엄마의 마지막 시간을 함께 보내며 가족과 삶에 대해 다시 생각하게 됐다”고 전했다.</p>
+<p>15. 할머니와 우 씨는 사진들을 보며 그동안 가슴 속에 담아 뒀던 모녀의 이야기를 했다.</p>
+<p>16-1. 할머니는 “엄마가 부족해서 미안하다. 잘못한 게 있다면 용서해 달라”고 말했고</p>
+<p>16-2. 우 씨는 “내 엄마라서 늘 고마웠고 사랑한다”고 했다.</p>
+<p>17. 할머니는 지난해 8월 29일 자택에서 눈을 감았다.</p>
+<p>18-1. 임종을 지킨 우 씨는 “좋은 시설에 있는 것보다 가족과 함께 마지막 시간을 보낼 때 마음이 더 편할 것”이라며</p>
+<p>18-2. “엄마의 마지막 시간을 함께 보내며 가족과 삶에 대해 다시 생각하게 됐다”고 전했다.</p>
 
 <h2>Źródło:</h2>
 
