--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -155,17 +155,17 @@
 				<th scope="row" rowspan="3">8</th>
 				<td rowspan="3">16 April 2025</td>
 				<td class="schedule-presentation">Homework 1</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Julia Domińska - entertainment industry</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 2</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Vanessa Khüebachová - cosmetics industry</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 3</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Gabriela Pikus - international success of Korean cinema</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
@@ -199,17 +199,17 @@
 				<th scope="row" rowspan="3">12</th>
 				<td rowspan="3">14 May 2025</td>
 				<td class="schedule-presentation">Homework 4</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Edyta Płonka - successful Korean writers</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 5</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Jaeseung Seo - military service in Korea</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 6</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Apolonia Strugarek - influence of social media</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
@@ -242,17 +242,17 @@
 				<th scope="row" rowspan="3">16</th>
 				<td rowspan="3">11 June 2025</td>
 				<td class="schedule-presentation">Homework 7</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Julia Trzaska - human rights activism</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 8</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Julia Zawierucha - plastic surgery for foreigners in Korea</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 9</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Karolina Żesławska - trends in food consumption</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
