--- a/uj/zajecia/24-25l/mkmb/class/2/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/2/index.html
@@ -44,10 +44,25 @@
 <h3>번역</h3>
 
 <p>0. 직장인 인사 예절</p>
+<ul>
+	<li>Greeting Etiquette at Work</li>
+</ul>
 <p>1-1. 처음으로 직장생활을 하면서 사회생활을 하게 되는 신입사원이라면</p>
+<ul>
+	<li>When we, for the first time, start working as an employee and engages in social life,</li>
+</ul>
 <p>1-2. 직장에서 인사하는 방법을 어떻게 배우고 어떻게 실천할 것인지 당혹스럽기 마련입니다.</p>
+<ul>
+	<li>it is natural to be confused about how to learn and practice greeting manners at work.</li>
+</ul>
 <p>2. 하지만 인사하는 습관 하나만으로도 자신의 직무 능력을 평가받을 수 있습니다.</p>
+<ul>
+	<li>However, your job competence may also be evaluated through your greeting habits.</li>
+</ul>
 <p>3. 인사는 예절의 기본이며, 인간관계의 출발입니다.</p>
+<ul>
+	<li>Greetings are the basis of etiquette and the beginning of human relations.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -75,9 +90,21 @@
 <h3>번역</h3>
 
 <p>4-1. 직장인에게 인사는 애사심의 발로이고 상사에 대해서는 존경심의 표현이며,</p>
+<ul>
+	<li>For a worker, greetings are manifestation of devotion to the company and an expression of respect to his or her superiors,</li>
+</ul>
 <p>4-2. 동료간에는 우애의 상징이고,</p>
+<ul>
+	<li>a symbol of friendly relations among colleagues,</li>
+</ul>
 <p>4-3. 고객에게는 고객 만족을 추구하는 상인정신의 표현이다.</p>
+<ul>
+	<li>and a display of merchant's mentality to pursue satisfaction among customers.</li>
+</ul>
 <p>4-4. 그것과 동시에 자신의 인격과 교양을 밖으로 나타내는 것입니다.</p>
+<ul>
+	<li>At the same time, they also show your personality and good manners.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -99,10 +126,25 @@
 <h3>번역</h3>
 
 <p>5. 인사의 중요성:</p>
+<ul>
+	<li>Importance of greetings:</li>
+</ul>
 <p>6. 상대의 인격을 존중하는 경의 표시</p>
+<ul>
+	<li>- a sign of respect for the other person</li>
+</ul>
 <p>7. 정성의 마음으로 하는 친절과 협조의 표시</p>
+<ul>
+	<li>- a sign of sincere kindness and cooperation</li>
+</ul>
 <p>8. 응답보다는 자기가 하는 데 의의</p>
+<ul>
+	<li>- focusing on your own action first rather than just responding</li>
+</ul>
 <p>9. 즐겁고 명랑한 사회생활, 원만한 대인관계 유지</p>
+<ul>
+	<li>- maintaining fun and cheerful social life, and good relations with others</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -135,12 +177,35 @@
 <h3>번역</h3>
 
 <p>10. 인사할 때의 마음가짐:</p>
+<ul>
+	<li>Attitude when greeting:</li>
+</ul>
 <p>11. 모든 인사는 정중하고 자연스러워야 합니다.</p>
+<ul>
+	<li>All greetings should be polite and natural.</li>
+</ul>
 <p>12. 얼굴의 표정은 밝게 하고 몸가짐은 단정히 하여 즐거운 마음으로 하여야 합니다.</p>
+<ul>
+	<li>You need to take pleasure in smiling and keeping correct behaviour.</li>
+</ul>
 <p>13. 인사의 기회는 극히 순간적이므로 시기를 놓치지 말고 적기에 해야 합니다.</p>
+<ul>
+	<li>The moment of greeting is very short, so do not miss the opportunity and do it in a timely manner.</li>
+</ul>
 <p>14. 고개만 숙이지 말고 마음속에서 우러나오는 진실한 자세로 반기고 또 감사하는 마음으로 인사를 하여야 합니다.</p>
+<ul>
+	<li>Do not only bow with your head but greet from the bottom of your heart with sincere posture and gratitude.</li>
+</ul>
 <p>15. 상대가 "나의 인사를 받아 줄 것인가"라는 생각은 절대 금물입니다.</p>
+<ul>
+	<li>You should never think about whether the other person will accept your greeting.</li>
+</ul>
 <p>16. 인사는 당당하고 자신 있게 해야 합니다.</p>
+<ul>
+	<li>You should greet with dignity and confidence.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
 
 <h3>어휘</h3>
 
@@ -168,6 +233,8 @@
 <p>21-2. 멈추어 서서 정중하게 인사를 합니다.</p>
 <p>22-1. 복도에서 상사를 만났을 경우에는 걸음을 멈출 필요가 없으며</p>
 <p>22-2. 한쪽 옆으로 비키며 가볍게 인사를 합니다.</p>
+
+<hr class="homework">
 
 <h2>Source:</h2>
 
