--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -109,7 +109,7 @@
 			<tr>
 				<th scope="row">17</th>
 				<td>2026년 3월 5일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><!-- a href="viiilo/zajecia/25-26/jk3/zajecia/7"--><!--/a--></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/8">7. 스트레스를 받으면 가슴이 답답해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">18</th>
