--- a/viiilo/zajecia/24-25z/jk1/zajecia/4/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/4/index.html
@@ -15,7 +15,7 @@
 
 <h2>Zajęcia</h2>
 
-<h3>Podręcznik (strony 26-33)</h3>
+<h3>Podręcznik (strona 26)</h3>
 
 <ul>
 	<li>
@@ -24,12 +24,23 @@
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_9.mp3"></audio>
 		</div>
 	</li>
+</ul>
+
+<h2>Praca domowa</h2>
+
+<h3>Podręcznik (strony 26-30)</h3>
+
+<ul>
+	<li>strona 26, zadanie 3-2)-(2)</li>
+	<li>strona 27, zadanie 4-(1)</li>
+	<li>strona 28, zadanie 1-(1)</li>
 	<li>
 		<div>strona 28, zadanie 1-(2)</div>
 		<div>
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_10.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 29, zadanie 2-(1)</li>
 	<li>
 		<div>strona 29, zadanie 2-(2)</div>
 		<div>
@@ -42,21 +53,20 @@
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_12.mp3"></audio>
 		</div>
 	</li>
-	<li>
-		<div>strona 31</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_13.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 32-33</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_14.mp3"></audio>
-		</div>
-	</li>
+	<li>strona 30, zadanie 3-(3)</li>
+	<!-- <li> -->
+		<!-- <div>strona 31</div> -->
+		<!-- <div> -->
+			<!-- <audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_13.mp3"></audio> -->
+		<!-- </div> -->
+	<!-- </li> -->
+	<!-- <li> -->
+		<!-- <div>strona 32-33</div> -->
+		<!-- <div> -->
+			<!-- <audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_S_1A_00_14.mp3"></audio> -->
+		<!-- </div> -->
+	<!-- </li> -->
 </ul>
-
-<h2>Praca domowa</h2>
 
 <h3>Ćwiczenia (strony 17-25)</h3>
 
@@ -85,6 +95,7 @@
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_10.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 19, zadanie 1-3)</li>
 	<li>
 		<div>strona 20, zadanie 2-1)</div>
 		<div>
@@ -97,6 +108,7 @@
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_12.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 21, zadanie 2-3)</li>
 	<li>
 		<div>strona 21, zadanie 2-4)</div>
 		<div>
@@ -109,12 +121,16 @@
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_14.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 22, zadanie 2-6)</li>
+	<li>strona 23, zadanie 2-7)</li>
 	<li>
 		<div>strona 24, zadanie 3-1)</div>
 		<div>
 			<audio controls src="viiilo/zajecia/24-25z/jk1/pliki/SJ_W_1A_00_15.mp3"></audio>
 		</div>
 	</li>
+	<li>strona 24, zadanie 3-2)</li>
+	<li>strona 25, zadanie 3-3)</li>
 	<li>
 		<div>strona 25, zadanie 3-4)</div>
 		<div>
