--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -139,8 +139,8 @@
 			<tr>
 				<th scope="row">6</th>
 				<td>23 April 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">tourism</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/6">"한국에만 안 돼요"…외국인 관광 불편 1위 '구글맵 불통'</a></td>
 			</tr>
 			</tr>
 			<tr>
