--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -48,75 +48,68 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>2025년 10월 9일</td>
-				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/2">1. 저는 프로그램 만드는 일을 해요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/2">1. 저는 프로그램 만드는 일을 해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
 				<td>2025년 10월 16일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
-				<td>2025년 10월 23일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 10월 30일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/3">2. 등산을 하거나 운동 모임에 가요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>2025년 10월 30일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 11월 6일</td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>2025년 11월 6일</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">9</th>
 				<td>2025년 11월 13일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">10</th>
+				<th scope="row">9</th>
 				<td>2025년 11월 20일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">11</th>
+				<th scope="row">10</th>
 				<td>2025년 11월 27일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">12</th>
+				<th scope="row">11</th>
 				<td>2025년 12월 4일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
+				<th scope="row">12</th>
 				<td>2025년 12월 11일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">13</th>
 				<td>2025년 12월 18일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">14</th>
 				<td>2026년 1월 8일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">16</th>
+				<th scope="row">15</th>
 				<td>2026년 1월 15일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">16</th>
 				<td>2026년 1월 22일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">18</th>
+				<th scope="row">17</th>
 				<td>2026년 1월 29일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
