--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -284,8 +284,8 @@
 				<th scope="row">11</th>
 				<td>4 czerwca 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"><!--psychologia--></td>
-				<td class="schedule-lecture"><!--<a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/6">한국인의 자기 개념</a>--></td>
+				<td class="schedule-lecture">psychologia</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/6">한국인의 자기 개념</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">12</th>
