--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -295,7 +295,7 @@
 	<ol>
 		<li>눈물 속에 있는 단백질은 기분을 좋게 만든다.</li>
 		<li>슬퍼서 흘리는 눈물에는 항균 물질이 빠져 있다.</li>
-		<li>슬플 때 흘리는 눈물 속에는 몸에 나쁜 물질이 포함되어 있다.</li>
+		<li>슬플 때 흘리는 눈물 속에는 몸에 나쁜 물질이 포함되어 있다. <strong class="correct">✓</strong></li>
 		<li>물리적 자극으로 흘리는 눈물이 슬플 때의 눈물보다 성분이 더 다양하다.</li>
 	</ol>
 </div>
@@ -316,7 +316,7 @@
 	</div>
 	<ol>
 		<li>다양한 동물들이 유칼립투스 잎을 차지하기 위해 경쟁한다.</li>
-		<li>어미 코알라는 유칼립투스의 독성을 분해하는 효소를 가지고 있다.</li>
+		<li>어미 코알라는 유칼립투스의 독성을 분해하는 효소를 가지고 있다. <strong class="correct">✓</strong></li>
 		<li>코알라는 태어난 직후부터 많은 양의 유칼립투스 나뭇잎을 먹는다.</li>
 		<li>새끼 코알라는 유칼립투스의 독성 때문에 어미 배설물을 먹지 않는다.</li>
 	</ol>
@@ -393,129 +393,162 @@
 		<li>이제는 이모티콘이 없으면 메시지를 주고받기 어려울 정도이다.</li>
 	</ol>
 </div>
-<!-- <div class="exam-question"> -->
-	<!-- <h3>37.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>38.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h3>37.</h3>
+	<ul>
+		<li>음주 운전 - jazda pod wpływem alkoholu</li>
+		<li>인명 피해 - ofiary ludzkie</li>
+		<li>처벌 - kara</li>
+		<li>강화 - wzmocnienie (tutaj: zwiększenie)</li>
+		<li>법안 - projekt ustawy</li>
+		<li>국회 - parlament</li>
+		<li>안건 - propozycja (ustawy)</li>
+		<li>반쪽짜리 - niedopracowany, nieprzemyślany</li>
+		<li>가해자 - sprawca</li>
+		<li>미루다 - opóźniać</li>
+		<li>일정 기간 - określony czas</li>
+		<li>효력 - obowiązywanie (np. prawa)</li>
+		<li>경각심 - czujność</li>
+		<li>재발 - nawrót</li>
+		<li>취지 - zamiar, intencja, cel</li>
+		<li>수위 - poziom</li>
+		<li>거두다 - osiągnąć (np. zamierzony cel)</li>
+		<li>미흡하다 = 부족하다</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>음주 운전으로 인명 피해를 낸 사람에 대한 처벌 강화 법안이 국회에서 통과되었다. 하지만 새 법안은 원래 안건보다 처벌의 강도를 낮춘 것이라는 점에서 반쪽짜리 법안에 불과하다. 이 법안에 따르면 여전히 음주 운전 가해자의 처벌이 미뤄지거나 일정 기간이 지난 후 효력이 없어질 수도 있다. 이는 음주 운전에 대한 경각심을 높이고 재발 위험성을 낮추려던 본래의 취지에는 맞지 않는 것이다.</p>
+	</div>
+	<ol>
+		<li>법안이 가진 본래의 취지를 널리 알려야 한다.</li>
+		<li>피해 정도에 따라 처벌의 수위를 조절해야 한다.</li>
+		<li>새 법안의 통과가 더 이상 미루어져서는 안 된다.</li>
+		<li>새 법안은 실질적 효과를 거두는 데 미흡한 점이 있다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>38.</h3>
+	<ul>
+		<li>폭발적으로 - gwałtownie</li>
+		<li>핵심 - sedno, istota</li>
+		<li>집어내다 - wskazać, określić</li>
+		<li>요약 - skrót, podsumowanie</li>
+		<li>정돈하다 - ułożyć</li>
+		<li>취하다 - pochłaniać (np. wiedzę)</li>
+		<li>사물 - obiekt</li>
+		<li>관찰하다 - obserwować</li>
+		<li>처리하다 - przetwarzać</li>
+		<li>무디다 - być tępym (np. o nożu), mieć problemy (np. ze wzrokiem/słuchem)</li>
+		<li>습득 - przyjmowanie (np. wiedzy)</li>
+		<li>사고 = 생각</li>
+		<li>저하 - spadek</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>정보의 양이 폭발적으로 증가하면서 핵심만 집어낸 요약형 정보를 찾는 사람들이 늘고 있다. 필요한 지식을 쉽고 빠르게 얻을 수 있기 때문이다. 그러나 짧게 정돈된 지식만을 취하다 보면 사물을 오랫동안 관찰하고 분석하는 능력이 떨어지거나 정보를 비판적으로 처리할 수 있는 능력이 무뎌질 수 있다.</p>
+	</div>
+	<ol>
+		<li>요약형 정보는 가장 효율적인 정보 습득 방식이다.</li>
+		<li>요약형 정보는 사람들의 사고력 저하를 초래할 수 있다.</li>
+		<li>사람들이 습득해야 할 지식의 양이 크게 증가하고 있다.</li>
+		<li>짧게 정돈된 지식 덕분에 정보 처리 시간을 줄일 수 있다.</li>
+	</ol>
+</div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[39~41]. 주어진 문장이 들어갈 곳으로 가장 알맞은 것을 고르십시오.</h2> -->
-	<!-- <h3>39.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>산업 - przemysł</li> -->
-		<!-- <li>구조 - struktura</li> -->
-		<!-- <li>변동성 - zmienność</li> -->
-		<!-- <li>기계 - maszyna</li> -->
-		<!-- <li>인지적 - poznawczy</li> -->
-		<!-- <li>영역 - obszar</li> -->
-		<!-- <li>접어들다 - zbliżać się</li> -->
-		<!-- <li>비약적 = 아주 빠름</li> -->
-		<!-- <li>윤택하다 - wzbogacić</li> -->
-		<!-- <li>소외 - izolacja</li> -->
-		<!-- <li>단정(을) 짓다 - stwierdzić z pewnością</li> -->
-		<!-- <li>발달 = 발전</li> -->
-		<!-- <li>진학하다 = 학교를 다니다</li> -->
-		<!-- <li>전망 - przewidywanie</li> -->
-	<!-- </ul> -->
-	<!-- <p class="topik-textbox"> -->
-		<!-- 산업 구조의 변화에 따라 당연히 일자리의 변동성도 커질 것이다. -->
-	<!-- </p> -->
-	<!-- <p class="topik-textbox"> -->
-		<!-- 지금 우리는 기계가 인간의 인지적인 영역까지 대신하는 제2의 기계 시대로 접어들고 있다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이러한 비약적인 기계 발전의 시대가 인간의 삶을 더 윤택하게 할지 더 소외시킬지 단정 지을 수는 없다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 하지만 급속한 기술의 발달로 현재의 산업 구조가 크게 바뀐다는 것만은 분명하다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 그래서 지금 초등학교에 진학하는 아이들의 65%는 현재에는 없는 직업을 갖게 될 것으로 전망된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) -->
-	<!-- </p> -->
-	<!-- <ol> -->
-		<!-- <li>㉠</li> -->
-		<!-- <li>㉡</li> -->
-		<!-- <li>㉢</li> -->
-		<!-- <li>㉣</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>40.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>이름을 걸다</li> -->
-		<!-- <li>우울하다 - być przygnębionym/przygnębiającym</li> -->
-		<!-- <li>등장인물 - bohater (np. powieści)</li> -->
-		<!-- <li>기호 - znak, symbol</li> -->
-		<!-- <li>개성 - osobowość, indywidualność</li> -->
-		<!-- <li>집단 - grupa</li> -->
-		<!-- <li>삭막하다 - być opuszczonym</li> -->
-		<!-- <li>암울하다 - być ponurym/posępnym</li> -->
-		<!-- <li>명예 - honor, zaszczyt</li> -->
-		<!-- <li>목숨을 던지다 - poświęcić życie</li> -->
-	<!-- </ul> -->
-	<!-- <p class="topik-textbox"> -->
-		<!-- 사람에게 이름이 있다는 것을 말 그대로 자신의 이름을 걸고 세상을 살고 있다는 것을 의미한다. -->
-	<!-- </p> -->
-	<!-- <p class="topik-textbox"> -->
-		<!-- 우울한 미래가 배경인 소설이나 영화를 보면 등장인물의 이름이 없는 경우가 많다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이름 대신 숫자나 기호 같은 것으로 불리면서 개성이 없이 집단화된 모습을 보여 준다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 사람이 이름이 아니라 번호로 불릴 때 얼마나 삭막하고 암울한지를 그러한 모습을 보면서 알게 된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 그래서 우리가 기억하는 역사 속 인물들도 이름을 명예롭게 지키고자 때로는 목숨까지 던지지 않았을까? (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) -->
-	<!-- </p> -->
-	<!-- <ol> -->
-		<!-- <li>㉠</li> -->
-		<!-- <li>㉡</li> -->
-		<!-- <li>㉢</li> -->
-		<!-- <li>㉣</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>41.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>계기 - okazja, szansa</li> -->
-		<!-- <li>조직 - grupa, organizacja</li> -->
-		<!-- <li>시도 - próba</li> -->
-		<!-- <li>인주 - (fikcyjne) miasto Inju</li> -->
-		<!-- <li>상사 - firma/kompania handlowa</li> -->
-		<!-- <li>자율 - autonomia</li> -->
-		<!-- <li>근무 - praca</li> -->
-		<!-- <li>-제 = 제도 - system</li> -->
-		<!-- <li>도입하다 - wprowadzić (w życie)</li> -->
-		<!-- <li>업무 시간 - czas pracy</li> -->
-		<!-- <li>정하다 - ustalić</li> -->
-		<!-- <li>기존 - istniejący, obecny</li> -->
-		<!-- <li>사원 = 회사원</li> -->
-		<!-- <li>시범 운영 - testowe wprowadzenie (np. programu/systemu)</li> -->
-		<!-- <li>분석하다 - analizować</li> -->
-		<!-- <li>보완하다 - uzupełnić (np. braki)</li> -->
-		<!-- <li>정식으로 - formalnie, na stałe</li> -->
-		<!-- <li>시행 - wdrożenie, implementacja</li> -->
-	<!-- </ul> -->
-	<!-- <p class="topik-textbox"> -->
-		<!-- 나아가 이 제도의 도입을 계기로 조직 문화의 개선을 위하여 다양한 유형의 시도를 계속할 것이라고 밝혔다. -->
-	<!-- </p> -->
-	<!-- <p class="topik-textbox"> -->
-		<!-- 인주상사가 이번 달부터 '자율근무제'를 도입한다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이 제도는 본인의 업무 시간을 스스로 정할 수 있어 기존의 출퇴근 시간이 사라지게 된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이 회사에서는 오는 10월까지 모든 사원을 대상으로 자율근무제를 시범 운영할 예정이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 시범 운영 기간이 끝나면 이 제도의 장점과 단점을 분석하고 보완하여 정식으로 도입할 예정이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 다른 기업들도 이러한 인주상사의 자율근무제 시행에 큰 관심을 가지고 있다. -->
-	<!-- </p> -->
-	<!-- <ol> -->
-		<!-- <li>㉠</li> -->
-		<!-- <li>㉡</li> -->
-		<!-- <li>㉢</li> -->
-		<!-- <li>㉣</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[39~41]. 주어진 문장이 들어갈 곳으로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>39.</h3>
+	<ul>
+		<li>관 - korona</li>
+		<li>지배 - rządzenie</li>
+		<li>착용하다 - założyć (np. ubranie)</li>
+		<li>장신구 - biżuteria</li>
+		<li>화려하다 - być wyszukanym/fantazyjnym</li>
+		<li>지위 - pozycja</li>
+		<li>돋보이다(도두보이다) - wyróżnić się</li>
+		<li>고귀하다 - być majestatycznym</li>
+		<li>신부 - panna młoda</li>
+		<li>장식 - ozdoba</li>
+		<li>백성 - poddani</li>
+	</ul>
+	<p class="topik-textbox">
+		그래서 백성들이 구하기 힘든 매우 귀하고 값비싼 재료로 만들어졌다.
+	</p>
+	<p class="topik-textbox">
+		왕관은 과거 지배 계층이 착용했던 대표적인 장신구이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 장식도 화려하게 더해져 그것을 쓴 왕의 지위를 더욱 돋보이게 했다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 오늘날 왕관이 가졌던 힘과 지위의 의미는 약화되었으나 고귀한 이미지는 남아 여러 디자인에서 발견된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 아름다움이 강조되어야 할 신부의 머리 장식이나 여러 액세서리에 왕관이 활용되고 있는 것이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+	</p>
+</div>
+<div class="exam-question">
+	<h3>40.</h3>
+	<ul>
+		<li>정밀하다 - być precyzyjnym</li>
+		<li>외부인 - osoba z zewnątrz</li>
+		<li>궁궐 - pałac</li>
+		<li>침입하다 - włamać się</li>
+		<li>동궐도 - Donggwoldo (<q>Mapa Wschodnich Pałaców</q>)</li>
+		<li>창덕궁 - Pałac Changdeok</li>
+		<li>창경궁 - Pałac Changgyeong</li>
+		<li>전체 - całość</li>
+		<li>세로 - pionowo</li>
+		<li>가로 - poziomo</li>
+		<li>대작 - arcydzieło</li>
+		<li>건축물 - struktura architektoniczna</li>
+		<li>연 - lotos (roślina)</li>
+		<li>못 - staw</li>
+		<li>배치 - rozmieszczenie, rozplanowanie</li>
+		<li>재현하다 - odtwarzać, przedstawiać rzeczywistość</li>
+		<li>제작 - tworzenie, wytwarzanie</li>
+		<li>일체 = 모든 것</li>
+		<li>왕실 - rodzina królewska</li>
+		<li>기밀 = 중요한 비밀</li>
+		<li>추정하다 - szacować, oceniać</li>
+	</ul>
+	<p class="topik-textbox">
+		이처럼 정밀하면서도 실제와 같은 그림은 외부인이 궁궐에 침입할 목적으로 사용할 수 있다.
+	</p>
+	<p class="topik-textbox">
+		동궐도는 창덕궁과 창경궁 전체를 그린 조선 시대의 그림이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 세로 2m, 사로 5m가 넘는 대작으로 건축물은 물론 주변의 산과 궁궐 안 연못, 나무까지 그대로 그려 넣었다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 건물 배치와 건물 사이의 거리도 완벽하게 재현했다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이러한 이유로 제작자와 제작 연도를 포함하여 그림에 관련된 정보 일체를 왕실 기밀이었을 것으로 추청된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+	</p>
+	<ol>
+		<li>㉠</li>
+		<li>㉡</li>
+		<li>㉢</li>
+		<li>㉣</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>41.</h3>
+	<ul>
+		<li>친숙하다 - być znajomym</li>
+		<li>시 - wiersz</li>
+		<li>독자 - czytelnik</li>
+		<li>의도 - zamiar, intencja</li>
+		<li>N에서 비롯되다 = N에서 시작되다/나오다</li>
+		<li>독창적 - kreatywny, oryginalny</li>
+		<li>주목 - uwaga</li>
+		<li>시인 - poeta</li>
+		<li>무지개 - tęcza</li>
+		<li>작가 - pisarz</li>
+		<li>함축 - sugestia, konotacja</li>
+		<li>심오하다 - być głębokim</li>
+		<li>내면 - wnętrze</li>
+		<li>난해하다 - być trudnym do zrozumienia</li>
+		<li>평 = 평가</li>
+		<li>시집 - zbiór wierszy</li>
+		<li>전작 = 전 작품</li>
+		<li>한결 = 더</li>
+	</ul>
+	<p class="topik-textbox">
+		이는 친숙한 시로 독자에게 한걸음 더 다가겠다는 의도에서 비롯된 것이다.
+	</p>
+	<p class="topik-textbox">
+		독창적인 시로 주목 받고 있는 이성진 시인이 네 번째 시집 『무지개』를 출간했다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 지난 작품에서 작가는 함축적인 어휘로 인간의 심오한 내면세계를 그려 내 시가 난해하다는 평을 받았다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 그러나 이번 시집에서는 우리의 삶을 일상적인 언어로 노래하고 있어 전작에 비해 한결 가벼워진 느낌이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 늘 새로운 변화를 시도하고 있는 작가가 다음에는 우리에게 또 어떤 모습을 보여 줄지 기대된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+	</p>
+	<ol>
+		<li>㉠</li>
+		<li>㉡</li>
+		<li>㉢</li>
+		<li>㉣</li>
+	</ol>
+</div>
 
 </body></html>
 
