--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -69,7 +69,7 @@
 		<li>folklor</li>
 		<li>fotografia</li>
 		<li>kaligrafia</li>
-		<li>kpop</li>
+		<li>K-pop</li>
 		<li>malowidła ścienne</li>
 		<li>poezja</li>
 		<li>sztuka kulinarna</li>
@@ -121,7 +121,7 @@
 				<th scope="row">4</th>
 				<td>28 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 4</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/4">K-pop</a></td>
 			</tr>
 		</tbody>
 		<tbody>
