--- a/uj/zajecia/24-25z/itas/index.html
+++ b/uj/zajecia/24-25z/itas/index.html
@@ -172,7 +172,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 1</td>
-				<td class="schedule-presentation">Viktoriia Savitska</td>
+				<td class="schedule-presentation">Viktoriia Savitska - The Role of Collective Memory in Korean Protests</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 2</td>
@@ -208,7 +208,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 9</td>
-				<td class="schedule-presentation">Olga Horwat</td>
+				<td class="schedule-presentation">Olga Horwat - <i>Talchum</i>: Korean Mask Dance Drama</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 10</td>
@@ -252,7 +252,7 @@
 				<th scope="row" rowspan="5">14</th>
 				<td rowspan="5">31 January 2025</td>
 				<td class="schedule-presentation">Presentation 17</td>
-				<td class="schedule-presentation">Vanessa Khüebachová</td>
+				<td class="schedule-presentation">Vanessa Khüebachová - Teaching and Learning Korean: Most Effective Methods and Techniques</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 18</td>
@@ -264,7 +264,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 20</td>
-				<td class="schedule-presentation">Michał Baranowski</td>
+				<td class="schedule-presentation">Michał Baranowski - Telecom Esports Wars: Modern Era</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Lecture (Dr Wilczyński)</td>
