--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -99,21 +99,17 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 4</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25z/ljk4/zajecia/2">Arkusz 2</a></td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">5</th>
 				<td>4 listopada 2024</td>
 				<td class="schedule-lecture">Zajęcia 5</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
 				<td>18 listopada 2024</td>
 				<td class="schedule-lecture">Zajęcia 6</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 		<tbody>
 		</tbody>
