--- a/uj/zajecia/24-25z/ljk4/testy/1/index.html
+++ b/uj/zajecia/24-25z/ljk4/testy/1/index.html
@@ -11,89 +11,144 @@
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
-
-<h2>Kolokwium 2 (czytanie)</h2>
-
-<div>
-	<a href="https://forms.gle/HxVd9kAAbNf2tL866">https://forms.gle/HxVd9kAAbNf2tL866</a>
-</div>
+<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)<br><br>Kolokwium 1</h1>
 
 <div class="exam-question">
-	<h3>1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
-	<h4>내일 친구와 함께 놀이공원에 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
-	<ol>
-		<li>가는 편이다</li>
-		<li>가는 중이다</li>
-		<li>가기로 했다 <strong class="correct">✓</strong></li>
-		<li>간 적이 있다</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h3>2. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
-	<h4>한국어 실력을 <u>늘리고자</u> 한국 신문과 방송을 자주 봤다.</h4>
-	<ol>
-		<li>늘리기 위해서 <strong class="correct">✓</strong></li>
-		<li>늘리기 무섭게</li>
-		<li>늘리기 대신에</li>
-		<li>늘리는 반면에</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h3>3. 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4><img src="uj/zajecia/23-24z/ljk4/testy/czytanie/2/img/3.png" alt="3"></h4>
-	<ol>
-		<li>식당</li>
-		<li>은행</li>
-		<li>방송국</li>
-		<li>우체국 <strong class="correct">✓</strong></li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h3>4. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
-	<h4><img src="uj/zajecia/23-24z/ljk4/testy/czytanie/2/img/4.png" alt="4"></h4>
-	<ol>
-		<li>식료품 구입이 2013년보다 늘었다.</li>
-		<li>가방류 판매가 2013년에 비해 줄었다.</li>
-		<li>두 해 모두 화장품이 가장 많이 판매되었다. <strong class="correct">✓</strong></li>
-		<li>2014년에는 의류가 먹을 것보다 많이 팔렸다.</li>
-	</ol>
-</div>
-
-<div class="exam-question">
-	<h3>5. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
+	<h2>1. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
 	<ul>
-		<li>공간 - przestrzeń</li>
-		<li>추억 - wspomnienie</li>
-		<li>관람하다 - obejrzeć</li>
-		<li>내부 - wnętrze</li>
-		<li>전시하다 - wystawić (np. eksponat w muzeum)</li>
+		<li>지식을 쌓다 - gromadzić wiedzę</li>
 	</ul>
-	<div class="topik-textbox">
-		<p>최근 70~80년대 경험해 볼 수 있는 문화 공간이 생겼다. 서울시에서 새로 문을 연 '추억극장'이 바로 그곳이다. 입장료 2,000원만 내면 남녀노소 누구나 그때 유행했던 영화를 관람할 수 있으며 커피와 차, 과자 등 간단한 간식도 먹을 수 있다. 극장 내부에는 추억의 영화 포스터, 영화표 등이 전시되어 있다.</p>
+	<p>책을 많이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 지식을 쌓을 수 있다.</p>
+	<ol>
+		<li>읽으면</li>
+		<li>읽든지</li>
+		<li>읽지만</li>
+		<li>읽거나</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>2. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h2>
+	<ul>
+		<li>개강 - rozpoczęcie zajęć</li>
+		<li>마찬가지 - to samo</li>
+		<li>셈 - sytuacja, rezultat</li>
+		<li>탓 - wina</li>
+		<li>마련 - przygotowanie, zapewnienie</li>
+		<li>나름 - swój sposób</li>
+	</ul>
+	<p>다음 주가 개강이니 방학도 다 <u>끝난 거나 마찬가지이다</u>.</p>
+	<ol>
+		<li>끝난 셈이다</li>
+		<li>끝난 탓이다</li>
+		<li>끝나기 마련이다</li>
+		<li>끝나기 나름이다</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>3. 다음은 무엇에 대한 글인지 고르십시오.</h2>
+	<ul>
+		<li>검사 - badanie</li>
+		<li>전날 - dzień przed</li>
+		<li>정확하다 - być dokładnym</li>
+		<li>음주 - spożywanie alkoholu</li>
+		<li>피하다 - unikać</li>
+		<li>상품 - produkt</li>
+		<li>안내 - ogłoszenie</li>
+		<li>주의 사항 - zalecenie</li>
+		<li>순서 - kolejność</li>
+		<li>문의 - zapytanie</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/testy/1/img/3.png" alt="3">
 	</div>
 	<ol>
-		<li>이곳에서 옛날 영화 포스터를 살 수 있다.</li>
-		<li>얼마 전 추억의 문화 공간이 새로 만들어졌다. <strong class="correct">✓</strong></li>
-		<li>추억극장이 입장료가 없기 때문에 인기가 많다.</li>
-		<li>추억극장에서는 최근에 나온 영화도 볼 수 있다.</li>
+		<li>상품 안내</li>
+		<li>주의 사항</li>
+		<li>사용 순서</li>
+		<li>장소 문의</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>6. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
+	<h2>4. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2>
+	<ul>
+		<li>예약 - rezerwacja</li>
+		<li>당일 - w dniu</li>
+		<li>불가 - niemożliwe</li>
+		<li>요금 - opłata</li>
+		<li>기준 - kryterium</li>
+		<li>평일 - dzień powszedni</li>
+		<li>주차장 - parking</li>
+		<li>포함하다 - uwzględnić, zawierać (w sobie)</li>
+		<li>관리 - zarządzanie, administracja</li>
+		<li>사무소 - biuro</li>
+		<li>내내 = 처음부터 끝까지</li>
+		<li>따로 - oddzielnie</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/testy/1/img/4.png" alt="4">
+	</div>
+	<ol>
+		<li>주말에는 이용 요금을 더 받는다.</li>
+		<li>캠핑장은 1년 내내 이용할 수 있다.</li>
+		<li>예약은 이용 당일 홈페이지에서 하면 된다.</li>
+		<li>주차장을 이용하려면 돈을 따로 내야 한다.</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>5. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2>
+	<ul>
+		<li>최근 - ostatnio, niedawno</li>
+		<li>아파트 - blok mieszkalny</li>
+		<li>택배 기사 - kurier</li>
+		<li>청소원 - sprzątacz(ka)</li>
+		<li>무료 - bezpłatny</li>
+		<li>화제가 되다 - być na ustach wszystkich, być głośnym (tematem)</li>
+		<li>부담 없이 - bez ograniczeń, bez wahania</li>
+		<li>만족하다 - być zadowolonym</li>
+		<li>주민 - mieszkaniec</li>
+		<li>음료 - napój</li>
+		<li>간식 - przekąska</li>
+		<li>제공하다 - dostarczyć, zapewnić</li>
+		<li>가져다주다 = 제공하다</li>
+		<li>생기다 - pojawić się</li>
+		<li>적극적으로 - aktywnie</li>
+		<li>돈을 벌다 - zarabiać pieniądze</li>
+		<li>운영 - prowadzić (np. sklep)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>최근 한 아파트에서는 힘들게 일하는 택배 기사, 청소원 등을 위한 무료 카페를 열어서 화제가 되고 있다. 이 카페는 언제든 부담 없이 음료를 마시면서 쉴 수 있는 곳이어서 이용자들이 만족해하고 있다. 주민들은 처음에는 관심을 안 보였지만 지금은 카페에 음료와 간식을 제공하는 등 많은 도움을 주고 있다.</p>
+	</div>
+	<ol>
+		<li>이 카페에 간식을 가져다주는 주민들이 생겼다.</li>
+		<li>카페를 열 때 아파트 주민들이 적극적으로 도왔다.</li>
+		<li>이 카페는 아파트 주민들이 돈을 벌기 위해서 열었다.</li>
+		<li>택배 기사들이 카페의 운영에 참여해 화제가 되고 있다.</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>6. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2>
 	<ul>
 		<li>희망 - nadzieja</li>
 		<li>지원 - wsparcie</li>
 		<li>사업 - projekt</li>
 		<li>운행 - obsługa (np. linii autobusowej)</li>
+		<li>~에 비해(서) - w porównaniu (do czegoś)</li>
 		<li>예산 - budżet</li>
+		<li>들다 - kosztować</li>
+		<li>그러므로 = 그래서</li>
 		<li>요금 - opłata</li>
+		<li>지원하다 - wspierać (tutaj: dofinansować)</li>
+		<li>정부 - rząd</li>
+		<li>아끼다 - oszczędzać</li>
+		<li>추가 - dodatkowy</li>
 		<li>부담하다 - wziąć na siebie odpowiedzialność (za coś)</li>
 		<li>주민 - mieszkaniec</li>
+		<li>시골 마을 - obszary wiejskie</li>
 		<li>등장하다 - pojawić się</li>
 	</ul>
 	<div class="topik-textbox">
@@ -106,51 +161,64 @@
 		<li>(가)-(라)-(나)-(다)</li>
 		<li>(가)-(다)-(라)-(나)</li>
 		<li>(라)-(나)-(다)-(가)</li>
-		<li>(라)-(다)-(가)-(나) <strong class="correct">✓</strong></li>
+		<li>(라)-(다)-(가)-(나)</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>7. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
+	<h2>7. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
 	<ul>
-		<li>소화 - trawienie</li>
-		<li>속도 - prędkość</li>
-		<li>개발하다 - wynaleźć</li>
-		<li>횟수 - liczba (np. przypadków)</li>
-		<li>측정하다 - mierzyć</li>
-		<li>경고음 - alarm</li>
-		<li>꾸미다 - dekorować</li>
-		<li>예절 - zasady zachowania</li>
+		<li>막대 - pałeczka, kijek</li>
+		<li>통 - pojemnik</li>
+		<li>꽂다 - włożyć (np. długi przedmiot do pojemnika)</li>
+		<li>뽑다 - wyciągnąć</li>
+		<li>발표 - prezentacja</li>
+		<li>방식 - sposób</li>
+		<li>적극적 - aktywny</li>
+		<li>먼저 - najpierw, pierwszy</li>
+		<li>손을 들다 - podnieść rękę</li>
+		<li>소극적 - pasywny</li>
+		<li>기회 - szansa, możliwość</li>
+		<li>놓치다 - stracić (np. szansę)</li>
+		<li>학습자 = 학생</li>
+		<li>골고루 - równomiernie, sprawiedliwie</li>
+		<li>면 - strona</li>
+		<li>단계 - stopień</li>
+		<li>동일하다 - być identycznym</li>
+		<li>맞추다 - dopasować, dostosować</li>
+		<li>진행 - prowadzenie (np. zajęć)</li>
+		<li>부드럽다 - być gładkim</li>
+		<li>떨어지다 - brakować</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>이제 음식을 빨리 먹어서 소화가 잘 안되는 문제를 쉽게 해결할 수 있게 되었다. 왜냐하면 식사 속도를 조절해 주는 포크가 개발되었기 때문이다. 이 포크는 1분당 입 안에 들어가는 횟수로 먹는 속도를 측정한다. 그래서 식사 속도가 빠르면 포크에서 경고음이 난다. 앞으로 이 포크는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 데 도움을 줄 것으로 보인다.</p>
+		<p>막대에 학생들의 이름을 써서 통에 꽂아 놓고 하나씩 뽑아서 발표를 시키는 수업 방식이 있다. 이것은 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 방식이다. 적극적인 학생들이 먼저 손을 들고 질문에 대답하면 소극적인 학생들이 대답할 기회를 놓치게 된다. 이 방식은 모든 학습자들에게 골고루 수업에 참여할 수 있게 한다는 긍정적인 면이 있다.</p>
 	</div>
 	<ol>
-		<li>하루 식사량을 늘리는</li>
-		<li>식탁을 아름답게 꾸미는</li>
-		<li>나쁜 식사 습관을 고치는 <strong class="correct">✓</strong></li>
-		<li>바른 식사 예절을 배우는</li>
+		<li>학생들의 이름을 빨리 기억하기 위한</li>
+		<li>수업의 단계를 동일하게 맞추기 위한</li>
+		<li>수업의 진행을 좀 더 부드럽게 하기 위한</li>
+		<li>적극성이 떨어지는 학생들에게도 기회를 주기 위한</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>[Bonus]. 다음을 읽고 물음에 답하십시오.</h3>
+	<h2>[Bonus]. 다음을 읽고 물음에 답하십시오.</h2>
 	<div class="topik-textbox">
-		<p>요즘 아빠들은 아이들에게 친구 같은 존재가 되고 싶어한다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 아이가 어릴 때는 친구 같은 아빠가 필요하다. 서로 사랑하는 마음을 표현하는 과정을 통해 부모와 자식 간의 신뢰가 깊어질 수 있기 때문이다. 그런데 아이의 인성이 완성되는 청소년기에는 '권위 있는 아빠'의 역할도 중요하다. 아빠의 권위 있는 말과 행동은 아이의 삶에 판단 기준이 되어 아이가 바른 길로 가는 데 도움을 줄 수 있기 때문이다.</p>
+		<p>시각 장애인의 안내견은 주인과 있을 때 행인에게 관심을 두지 않는다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 안내견이 주인을 남겨 두고 행인에게 다가간다면 이는 주인이 위험에 처해 있다는 뜻이다. 안내견은 주인에게 문제가 발생하면 곧장 주변 사람에게 달려가 도움을 요청하도록 훈련을 받기 때문이다. 안내견이 행인의 주위를 맴돌면 안내견을 따라가 주인의 상태를 확인하고 구조 센터에 연락해야 한다.</p>
 	</div>
-	<h4>8. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h4>
+	<h3>8. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>반면</li>
-		<li>물론 <strong class="correct">✓</strong></li>
-		<li>차라리</li>
-		<li>그러면</li>
+		<li>비록</li>
+		<li>물론</li>
+		<li>만약</li>
+		<li>과연</li>
 	</ol>
-	<h4>9. 이 글의 내용과 같은 것을 고르십시오.</h4>
+	<h3>9. 이 글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
-		<li>아이들은 자기 스스로 인성을 완성할 수 있다.</li>
-		<li>청소년기에는 친구 같은 아빠의 역할이 더 중요하다.</li>
-		<li>친구 같은 아빠는 아이가 바른 길로 가도록 도움을 준다.</li>
-		<li>권위 있는 아빠는 아이에게 삶의 판단 기준을 제시할 수 있다. <strong class="correct">✓</strong></li>
+		<li>안내견이 주인 곁을 떠나는 경우는 없다.</li>
+		<li>안내견은 문제가 생기면 구조 센터로 달려간다.</li>
+		<li>안내견이 다가오는 것은 위급한 상황이 생겼다는 뜻이다.</li>
+		<li>안내견은 항상 주변의 사람들에게 관심을 갖도록 훈련을 받는다.</li>
 	</ol>
 </div>
 
