--- a/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
@@ -11,20 +11,22 @@
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
-
-<h2></h2>
+<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)<br><br>Arkusz 1</h1>
 
 <div class="exam-question">
-	<h3>[1~2]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
-	<h4>1. 나는 오래전에 설악산을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
+	<h2>[1~2]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>1.</h3>
+	<p>나는 오래전에 설악산을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p>
 	<ol>
 		<li>등산하고 싶다</li>
 		<li>등산해도 된다</li>
 		<li>등산할 것 같다</li>
 		<li>등산한 적이 있다 <strong class="correct">✓</strong></li>
 	</ol>
-	<h4>2. 꽃이 피기 시작하는 걸 보니 봄이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
+</div>
+<div class="exam-question">
+	<h3>2.</h3>
+	<p>꽃이 피기 시작하는 걸 보니 봄이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p>
 	<ol>
 		<li>오곤 한다</li>
 		<li>온 모양이다 <strong class="correct">✓</strong></li>
@@ -34,15 +36,19 @@
 </div>
 
 <div class="exam-question">
-	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
-	<h4>3. 후배가 한 잘못을 알고 있었지만 미안해할까 봐 <u>모르는 척했다</u>.</h4>
+	<h2>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h2>
+	<h3>3.</h3>
+	<p>후배가 한 잘못을 알고 있었지만 미안해할까 봐 <u>모르는 척했다</u>.</p>
 	<ol>
 		<li>모르는 체했다 <strong class="correct">✓</strong></li>
 		<li>모르는 듯했다</li>
 		<li>모르는 편이다</li>
 		<li>모르기 마련이다</li>
 	</ol>
-	<h4>4. 계속 웃고 다니는 걸 보니 좋은 일이 <u>있나 보다</u>.</h4>
+</div>
+<div class="exam-question">
+	<h3>4.</h3>
+	<p>계속 웃고 다니는 걸 보니 좋은 일이 <u>있나 보다</u>.</p>
 	<ol>
 		<li>있는 척한다</li>
 		<li>있을 뿐이다</li>
@@ -52,29 +58,47 @@
 </div>
 
 <div class="exam-question">
-	<h3>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4>5. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/5.png" alt="5"></h4>
+	<h2>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h2>
+	<h3>5.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/5.png" alt="5">
+	</div>
 	<ol>
 		<li>환경 보호</li>
 		<li>생활 예절 <strong class="correct">✓</strong></li>
 		<li>건강 관리</li>
 		<li>봉사 활동</li>
 	</ol>
-	<h4>6. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/6.png" alt="6"></h4>
+</div>
+<div class="exam-question">
+	<h3>6.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/6.png" alt="6">
+	</div>
 	<ol>
 		<li>병원</li>
 		<li>은행 <strong class="correct">✓</strong></li>
 		<li>여행사</li>
 		<li>체육관</li>
 	</ol>
-	<h4>7. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/7.png" alt="7"></h4>
+</div>
+<div class="exam-question">
+	<h3>7.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/7.png" alt="7">
+	</div>
 	<ol>
 		<li>병원</li>
 		<li>은행 <strong class="correct">✓</strong></li>
 		<li>가게</li>
 		<li>학원</li>
 	</ol>
-	<h4>8. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/8.png" alt="8"></h4>
+</div>
+<div class="exam-question">
+	<h3>8.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/8.png" alt="8">
+	</div>
 	<ol>
 		<li>이용 안내 <strong class="correct">✓</strong></li>
 		<li>구입 문의</li>
@@ -84,22 +108,32 @@
 </div>
 
 <div class="exam-question">
-	<h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h4>
-	<h4>9. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/9.png" alt="9"></h4>
+	<h2>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
+	<h3>9.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/9.png" alt="9">
+	</div>
 	<ol>
 		<li>여성은 봉사 활동보다 취미 활동을 더 하고 싶어 한다. <strong class="correct">✓</strong></li>
 		<li>종교 활동을 하고 싶어 하는 비율은 남성이 여성보다 높다.</li>
 		<li>남녀 모두 경제 활동을 하고 싶다는 응답이 절반을 넘는다.</li>
 		<li>경제 활동보다 봉사 활동을 하고 싶어 하는 남성들이 많다.</li>
 	</ol>
-	<h4>10. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/10.png" alt="10"></h4>
+</div>
+<div class="exam-question">
+	<h3>10.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/10.png" alt="10">
+	</div>
 	<ol>
 		<li>주말에는 단체 할인을 받을 수 있다.</li>
 		<li>이 행사는 이번에 처음 열리는 행사이다.</li>
 		<li>특별권을 사면 놀이 시설 이용료가 할인된다.</li>
 		<li>지하철을 타고 가면 입장권을 싸게 살 수 있다. <strong class="correct">✓</strong></li>
 	</ol>
-	<h4>11.</h4>
+</div>
+<div class="exam-question">
+	<h3>11.</h3>
 	<ul>
 		<li>뇌 - mózg</li>
 		<li>기능 - funkcja</li>
@@ -117,7 +151,9 @@
 		<li>뇌 활동을 위해 익숙한 방법으로 손을 쓰는 것이 더 좋다.</li>
 		<li>자주 사용하지 않던 손을 사용하면 뇌 움직임이 활발해진다. <strong class="correct">✓</strong></li>
 	</ol>
-	<h4>12.</h4>
+</div>
+<div class="exam-question">
+	<h3>12.</h3>
 	<ul>
 		<li>신문사 - wydawnictwo prasowe</li>
 		<li>대회 - konkurs, zawody</li>
@@ -143,8 +179,8 @@
 </div>
 
 <div class="exam-question">
-	<h3>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
-	<h4>13.</h4>
+	<h2>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h2>
+	<h3>13.</h3>
 	<ul>
 		<li>이불 - pościel</li>
 		<li>널다 - rozwiesić (np. pranie)</li>
@@ -164,7 +200,9 @@
 		<li>(다)-(나)-(가)-(라)</li>
 		<li>(다)-(라)-(가)-(나)</li>
 	</ol>
-	<h4>14.</h4>
+</div>
+<div class="exam-question">
+	<h3>14.</h3>
 	<ul>
 		<li>떨림 - drganie, dreszcze</li>
 		<li>마그네슘 - magnez</li>
@@ -189,7 +227,9 @@
 		<li>(라)-(가)-(다)-(나)</li>
 		<li>(라)-(나)-(가)-(다) <strong class="correct">✓</strong></li>
 	</ol>
-	<h4>15.</h4>
+</div>
+<div class="exam-question">
+	<h3>15.</h3>
 	<ul>
 		<li>주인 - właściciel</li>
 		<li>사과하다 - przeprosić</li>
@@ -216,8 +256,8 @@
 </div>
 
 <div class="exam-question">
-	<h3>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
-	<h4>16.</h4>
+	<h2>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>16.</h3>
 	<ul>
 		<li>악보 - nuty</li>
 		<li>공연하다 - występować</li>
@@ -240,7 +280,9 @@
 		<li>공연을 기획하는 데에</li>
 		<li>장단점을 설명하는 데에</li>
 	</ol>
-	<h4>17.</h4>
+</div>
+<div class="exam-question">
+	<h3>17.</h3>
 	<ul>
 		<li>능력 - umiejętność</li>
 		<li>밀접하다 - być bliskim</li>
@@ -257,7 +299,9 @@
 		<li>필요한 단어를 잘 선택하라고</li>
 		<li>어휘의 의미를 잘 기억하라고</li>
 	</ol>
-	<h4>18.</h4>
+</div>
+<div class="exam-question">
+	<h3>18.</h3>
 	<ul>
 		<li>원래 - pierwotnie</li>
 		<li>악수 - podanie ręki</li>
@@ -287,7 +331,7 @@
 </div>
 
 <div class="exam-question">
-	<h3>[19~20]. 다음을 읽고 물음에 답하십시오.</h3>
+	<h2>[19~20]. 다음을 읽고 물음에 답하십시오.</h2>
 	<ul>
 		<li>흥미 - zainteresowanie</li>
 		<li>내세우다 - kłaść nacisk (na coś)</li>
@@ -307,14 +351,14 @@
 	<div class="topik-textbox">
 		<p>흥미와 재미 요소를 내세워 홍보하는 마케팅 전략이 주목받고 있다. 이런 마케팅은 소비자의 호기심을 자극해 구매로 이어지게 한다. 그러나 제품의 품질이 소비자의 기대에 미치지 못하는 경우 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 브랜드 이미지까지 나빠지기도 한다. 실제로 한 햄버거 회사에서 '주머니 버거', '눌러 먹는 버거'를 만들어 소비자의 관심을 끌었지만 품질이 기대에 못 미치자 회사의 다른 제품까지 판매가 감소한 경우가 있었다.</p>
 	</div>
-	<h4>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4>
+	<h3>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
 	<ol>
 		<li>과연</li>
 		<li>비록</li>
 		<li>차라리</li>
 		<li>오히려</li>
 	</ol>
-	<h4>20. 윗글의 주제로 가장 알맞은 것을 고르십시오.</h4>
+	<h3>20. 윗글의 주제로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
 		<li>마케팅도 중요하지만 제품의 품질이 더 중요하다.</li>
 		<li>식품 기업은 먼저 소비자의 요구를 확인해야 한다.</li>
