--- a/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/2/index.html
@@ -11,228 +11,353 @@
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
-
-<h2></h2>
+<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)<br><br>Arkusz 2</h1>
 
 <div class="exam-question">
-	<h3>[1~2]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
-	<h4>1. 나는 오래전에 설악산을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
+	<h2>[1~2]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>1.</h3>
+	<ul>
+		<li>지나치다 - przegapić (np. przystanek)</li>
+	</ul>
+	<p>휴대 전화를 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 내려야 할 역을 지나쳤다.</p>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>보든지</li>
+		<li>보다가</li>
+		<li>보려면</li>
+		<li>보고서</li>
 	</ol>
-	<h4>2. 꽃이 피기 시작하는 걸 보니 봄이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</h4>
+</div>
+<div class="exam-question">
+	<h3>2.</h3>
+	<ul>
+		<li>이사하다 - przeprowadzić się</li>
+	</ul>
+	<p>새집으로 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 가구를 새로 샀다.</p>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>이사한 지</li>
+		<li>이사하거든</li>
+		<li>이사하려면</li>
+		<li>이사하고 나서</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h3>
-	<h4>3. 후배가 한 잘못을 알고 있었지만 미안해할까 봐 <u>모르는 척했다</u>.</h4>
+	<h2>[3~4]. 밑줄 친 부분과 의미가 가장 비슷한 것을 고르십시오.</h2>
+	<h3>3.</h3>
+	<ul>
+		<li>직장 - praca, miejsce pracy</li>
+		<li>동료 - kolega z pracy</li>
+		<li>사이 - znajomość, poziom znajomości</li>
+		<li>~에 불과하다 - być ograniczonym (do czegoś), być tylko (kimś/czymś)</li>
+	</ul>
+	<p>두 사람은 오랫동안 알고 지냈지만 직장 동료 <u>사이일 뿐이다</u>.</p>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>사이에 불과하다</li>
+		<li>사이라면 좋겠다</li>
+		<li>사이일지도 모른다</li>
+		<li>사이라고 볼 수 없다</li>
 	</ol>
-	<h4>4. 계속 웃고 다니는 걸 보니 좋은 일이 <u>있나 보다</u>.</h4>
+</div>
+<div class="exam-question">
+	<h3>4.</h3>
+	<ul>
+		<li>일자리 - miejsce pracy</li>
+		<li>늘리다 - zwiększyć (np. liczbę/ilość)</li>
+		<li>정책 - polityka (np. mieszkaniowa)</li>
+		<li>수립하다 - wprowadzić (np. politykę)</li>
+	</ul>
+	<p>정부는 일자리를 <u>늘리고자</u> 새로운 정책을 수립했다.</p>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>늘리자마자</li>
+		<li>늘리더라도</li>
+		<li>늘리는 대신</li>
+		<li>늘리기 위해</li>
 	</ol>
 </div>
 
 <div class="exam-question">
-	<h3>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4>5. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/5.png" alt="5"></h4>
+	<h2>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h2>
+	<h3>5.</h3>
+	<ul>
+		<li>대한 - koreański</li>
+		<li>성장하다 - rozwijać się</li>
+		<li>사원 - pracownik</li>
+		<li>모집 - nabór</li>
+		<li>제품 - produkt</li>
+		<li>판매 - sprzedaż</li>
+		<li>안내 - ogłoszenie</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/5.png" alt="5">
+	</div>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>사원 모집</li>
+		<li>여행 소개</li>
+		<li>제품 설명</li>
+		<li>판매 안내</li>
 	</ol>
-	<h4>6. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/6.png" alt="6"></h4>
+</div>
+<div class="exam-question">
+	<h3>6.</h3>
+	<ul>
+		<li>공연장 - sala koncertowa</li>
+		<li>내(內) - wewnątrz, wnętrze</li>
+		<li>사진을 촬영하다 = 사진을 찍다</li>
+		<li>금지 - zakaz</li>
+		<li>전원 - zasilanie</li>
+		<li>진동 - wibracje</li>
+		<li>관람 - zwiedzanie</li>
+		<li>규칙 - zasady, reguły</li>
+		<li>문의 - zapytanie</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/6.png" alt="5">
+	</div>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>관람 규칙</li>
+		<li>제품 소개</li>
+		<li>사용 방법</li>
+		<li>예약 문의</li>
 	</ol>
-	<h4>7. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/7.png" alt="7"></h4>
+</div>
+<div class="exam-question">
+	<h3>7.</h3>
+	<ul>
+		<li>싹싹 - dźwięk/ruch wycierania</li>
+		<li>풀리다 - rozwijać się</li>
+		<li>닦다 - wycierać</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/7.png" alt="5">
+	</div>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>연필</li>
+		<li>휴지</li>
+		<li>책상</li>
+		<li>거울</li>
 	</ol>
-	<h4>8. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/8.png" alt="8"></h4>
+</div>
+<div class="exam-question">
+	<h3>8.</h3>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/8.png" alt="5">
+	</div>
 	<ol>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>안경</li>
+		<li>침대</li>
+		<li>운동화</li>
+		<li>노트북</li>
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h4> -->
-	<!-- <h4>9. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/9.png" alt="9"></h4> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>10. <img src="uj/zajecia/24-25z/ljk4/zajecia/1/img/10.png" alt="10"></h4> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>11.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>손을 움직이는 것은 뇌와 관련이 있다. 그래서 손을 자주 움직이면 뇌 기능이 좋아질 수 있다. 특히 자주 사용하지 않는 손을 움직일 때 뇌가 더 효과적으로 자극될 수 있다. 평소에 오른손을 많이 쓴다면 왼손을, 왼손을 많이 쓴다면 오른손을 사용하는 것이다. 문을 열고 닫는 일처럼 간단한 일을 그렇게 하는 것만으로도 뇌 기능을 유지하는 데 도움이 된다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>12.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>아침신문사에서는 오는 12월 20일에 한국어 말하기 대회를 개최한다. 이 대회는 한국에 사는 외국인 대학생을 대상으로 하며 주제는 '나와 한국'이다. 참가를 원하는 사람은 발표할 내용을 원고지 10장 정도의 글로 써서 12월 5일까지 이메일로 보내면 된다. 예선은 원고 심사로 대신하며 본선 참가자는 홈페이지를 통해 공지할 예정이다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h2>
+	<h3>9.</h3>
+	<ul>
+		<li>축제 - festiwal, festyn</li>
+		<li>시청 - ratusz</li>
+		<li>광장 - plac</li>
+		<li>행사 - wydarzenie</li>
+		<li>전통 - tradycja</li>
+		<li>무료 - bezpłatny</li>
+		<li>시식 - degustacja</li>
+		<li>체험 - doświadczenie, przeżycie (czegoś)</li>
+		<li>원하다 - pragnąć</li>
+		<li>현장 - miejsce (np. zdarzenia)</li>
+		<li>직접 - bezpośredni</li>
+		<li>신청하다 - zgłosić/zapisać się</li>
+		<li>진행되다 - trwać</li>
+		<li>예약하다 - zarezerwować</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/9.png" alt="9">
+	</div>
+	<ol>
+		<li>축제는 올해 처음 열린다.</li>
+		<li>축제는 주말 이틀 동안 진행된다.</li>
+		<li>축제에서 체험을 하려면 예약해야 한다.</li>
+		<li>축제에서 전통 요리를 사 먹을 수 있다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>10.</h3>
+	<ul>
+		<li>용돈 - kieszonkowe</li>
+		<li>쓰다 = 사용하다</li>
+		<li>물건 - przedmiot</li>
+		<li>구입 - zakup</li>
+		<li>비 = 비용 - koszt</li>
+		<li>교통 - transport, komunikacja</li>
+		<li>비율 - stosunek</li>
+		<li>배 - raz</li>
+		<li>절반 - połowa</li>
+		<li>이상 - ponad</li>
+		<li>지출하다 - wydawać (na coś pieniądze)</li>
+	</ul>
+	<div>
+		<img src="uj/zajecia/24-25z/ljk4/zajecia/2/img/10.png" alt="10">
+	</div>
+	<ol>
+		<li>용돈 중 물건 구입비의 비율이 가장 낮았다.</li>
+		<li>학원비 사용은 교통비보다 두 배 이상 많았다.</li>
+		<li>대학생들은 용돈의 절반 이상을 식비로 지출했다.</li>
+		<li>대학생들은 문화생활비보다 교통비를 더 적게 사용했다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>11.</h3>
+	<ul>
+		<li>규모 - skala</li>
+		<li>지진 - trzęsienie ziemi</li>
+		<li>발생하다 - mieć miejsce</li>
+		<li>119 - pogotowie ratunkowe</li>
+		<li>상황실 - centrum dowodzenia</li>
+		<li>느끼다 - odczuć</li>
+		<li>시민 - mieszkaniec</li>
+		<li>신고 - zgłoszenie</li>
+		<li>접수하다 - przyjąć (np. zgłoszenie)</li>
+		<li>피해를 입다 - ponieść szkodę</li>
+		<li>조사하다 - zbadać</li>
+		<li>기상청 - Instytut Meteorologii</li>
+		<li>정도 - około</li>
+		<li>일어나다 = 발생하다</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>17일 오전 6시 22분 인주시에서 규모 3.2의 지진이 발생했다. 이날 지진은 올해 인주시에서 발생한 지진 중 가장 큰 규모다. 119 상황실에는 지진을 느낀 시민들의 신고가 여러 건 접수됐다. 그러나 이번 지진으로 입은 큰 피해는 없는 것으로 조사됐다. 기상청은 이번 주 내로 규모 2.0 정도의 지진이 몇 번 더 발생할 것으로 보고 있다.</p>
+	</div>
+	<ol>
+		<li>이번 지진은 늦은 밤에 일어났다.</li>
+		<li>시민들이 지진을 느껴 상황실에 신고를 했다.</li>
+		<li>이번 지진으로 큰 피해를 입은 사람들이 많다.</li>
+		<li>이번 주에는 더 이상 지진이 일어나지 않을 것이다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>12.</h3>
+	<ul>
+		<li>최근 - ostatnio</li>
+		<li>초록(색) - kolor zielony</li>
+		<li>콩나물 - kiełki sojowe</li>
+		<li>주부 - pani domu, gospodyni</li>
+		<li>늘다 - zwiększać się</li>
+		<li>천 - tkanina, materiał</li>
+		<li>덮다 - przykryć</li>
+		<li>기르다 - hodować</li>
+		<li>가리다 - przykryć</li>
+		<li>자라다 - rosnąć (o roślinach)</li>
+		<li>변하다 = 바뀌다</li>
+		<li>영양가 - składniki odżywcze</li>
+		<li>들다 - zawierać (w sobie)</li>
+		<li>피로 - zmęczenie</li>
+		<li>회복 - regeneracja, usunięcie (zmęczenia)</li>
+		<li>키우다 = 기르다</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>최근 초록 콩나물을 찾는 주부들이 늘고 있다. 노란 콩나물은 보통 검은색 천으로 덮어 어두운 곳에서 기른다. 그러나 초록 콩나물은 천으로 가리지 않고 밝은 곳에서 자라게 한다. 햇빛을 받아 초록색으로 변한 콩나물은 노란 콩나물보다 영양가가 높다. 특히 초록 콩나물은 노란 콩나물보다 비타민이 많이 들어 있어서 피로 회복에 좋다.</p>
+	</div>
+	<ol>
+		<li>노란 콩나물은 햇빛을 받고 자란다.</li>
+		<li>초록 콩나물은 검은색 천으로 덮어서 키운다.</li>
+		<li>노란 콩나물은 초록 콩나물보다 피로 회복에 좋다.</li>
+		<li>초록 콩나물은 노란 콩나물에 비해 영양가가 많다.</li>
+	</ol>
+</div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h3>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3> -->
-	<!-- <h4>13.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(가) 이불을 세탁해서 밖에 널어 두고 장을 보러 나갔다.</p> -->
-		<!-- <p>(나) 비가 오는 것을 보고 이웃이 대신 이불을 걷어 준 것이었다.</p> -->
-		<!-- <p>(다) 갑자기 비가 내려서 이불이 걱정되어 집으로 서둘러 돌아왔다.</p> -->
-		<!-- <p>(라) 도착해 보니 이불을 보관하고 있다는 메모가 문 앞에 붙어 있었다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>14.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(가) 쉬어도 떨림이 계속된다면 마그네슘이 부족해서일 수도 있다.</p> -->
-		<!-- <p>(나) 눈 밑 떨림의 주된 원인은 피로이므로 푹 쉬면 증상은 완화된다.</p> -->
-		<!-- <p>(다) 이런 사람들은 마그네슘이 풍부한 견과류나 바나나를 먹으면 좋다.</p> -->
-		<!-- <p>(라) 누구나 한 번쯤은 눈 밑 떨리는 경험을 해 본 적이 있을 것이다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h4>15.</h4> -->
-	<!-- <ul> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>(가) 차에서 내려 앞차의 주인에게 사과하고 사정을 설명했다.</p> -->
-		<!-- <p>(나) 앞차 주인은 큰 사고가 아니니 괜찮다며 그냥 가라고 했다.</p> -->
-		<!-- <p>(다) 친절한 배려 덕분에 딸은 무사히 병원에 도착해 치료를 받았다.</p> -->
-		<!-- <p>(라) 아픈 딸을 병원으로 급하게 데려다가 앞차와 부딪쳐서 사고를 냈다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h3>[13~15]. 다음을 순서에 맞게 배열한 것을 고르십시오.</h3>
+	<h4>13.</h4>
+	<ul>
+		<li>선택 - wybór</li>
+		<li>부담 - ciężar</li>
+		<li>구매 - kupno</li>
+		<li>망설이다 - wahać się</li>
+		<li>포기하다 - rezygnować</li>
+		<li>고객 - klient</li>
+		<li>줄이다 - zmniejszyć</li>
+		<li>유도하다 - zachęcać</li>
+		<li>품목 - kategoria produktów</li>
+		<li>-별(別) = -마다</li>
+		<li>매장 = 가게</li>
+		<li>진열하다 - wystawić</li>
+		<li>소비자 - konsument</li>
+		<li>폭 - pole (np. manewru)</li>
+		<li>겪다 - doświadczyć</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 선택에 대한 부담으로 구매를 망설이다가 포기하기도 한다.</p>
+		<p>(나) 선택에 대한 고객의 부담을 줄여 구매를 유도하려는 것이다.</p>
+		<p>(다) 그래서 마트에서는 품목별로 몇 가지의 제품만 매장에 진열한다.</p>
+		<p>(라) 소비자는 선택의 폭이 넓을수록 물건을 고를 때 어려움을 겪는다.</p>
+	</div>
+	<ol>
+		<li>(나)-(가)-(라)-(다)</li>
+		<li>(나)-(라)-(가)-(다)</li>
+		<li>(라)-(가)-(다)-(나)</li>
+		<li>(라)-(다)-(가)-(나)</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>14.</h4>
+	<ul>
+		<li>로비 - lobby, poczekalnia</li>
+		<li>외부인 - osoba z zewnątrz, obcy</li>
+		<li>개방하다 - otworzyć</li>
+		<li>작품 - dzieło, eksponat</li>
+		<li>감상하다 - oglądać (np. dzieła sztuki)</li>
+		<li>미술관 - galeria sztuki</li>
+		<li>즐기다 - miło spędzać czas</li>
+		<li>공간 - przestrzeń</li>
+		<li>이용하다 - wykorzystywać</li>
+		<li>늘다 - zwiększać się (np. o liczbie)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 회사의 1층 로비를 외부인에게 개방하는 회사가 많아졌다.</p>
+		<p>(나) 사람들은 작품을 감상하고 커피를 마시면서 시간을 보낸다.</p>
+		<p>(다) 미술관과 카페를 만들어 사람들이 와서 즐길 수 있게 한 것이다.</p>
+		<p>(라) 이 공간을 이용하는 사람이 늘면서 회사의 이미지도 좋아지고 있다.</p>
+	</div>
+	<ol>
+		<li>(가)-(다)-(나)-(라)</li>
+		<li>(나)-(라)-(다)-(가)</li>
+		<li>(다)-(나)-(라)-(가)</li>
+		<li>(라)-(나)-(가)-(다)</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h4>15.</h4>
+	<ul>
+		<li>모래 - piasek</li>
+		<li>일정 - określony, konkretny</li>
+		<li>단위 - jednostka (np. miar)</li>
+		<li>재다 - zmierzyć</li>
+		<li>기구 - przyrząd</li>
+		<li>구멍 - otwór, dziura</li>
+		<li>통해(서) - poprzez</li>
+		<li>양 - ilość</li>
+		<li>조절하다 - regulować</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>(가) 모래시계는 모래를 이용해 일정 단위의 시간을 재는 기구이다.</p>
+		<p>(나) 또한 모래시계의 구멍 크기를 통해서도 시간 단위를 조절한다.</p>
+		<p>(다) 구멍 크기가 작을수록 큰 시간 단위 모래시계를 만들 수 있다.</p>
+		<p>(라) 모래의 양을 조절하면 다양한 시간 단위의 모래시계를 만들 수 있다.</p>
+	</div>
+	<ol>
+		<li>(가)-(다)-(나)-(라)</li>
+		<li>(가)-(라)-(나)-(다)</li>
+		<li>(라)-(다)-(나)-(가)</li>
+		<li>(라)-(가)-(다)-(나)</li>
+	</ol>
+</div>
 
 <!-- <div class="exam-question"> -->
 	<!-- <h3>[16~18]. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3> -->
 	<!-- <h4>16.</h4> -->
 	<!-- <ul> -->
 		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
-		<!-- <p>악보 없이 공연하는 것은 피아니스트들의 오랜 전통이다. 이에 대해 일부 사람들은 악보를 외우는 것보다는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 시간을 써야 한다고 말한다. 그러나 악보를 외우면 작곡가를 좀 더 이해하게 되어 결국 작품에 대한 표현력이 풍성해질 수 있다.</p> -->
+		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
 	<!-- </div> -->
 	<!-- <ol> -->
 		<!-- <li></li> -->
@@ -243,13 +368,9 @@
 	<!-- <h4>17.</h4> -->
 	<!-- <ul> -->
 		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
-		<!-- <p>언어를 사용하는 능력은 손가락과 밀접한 관련성이 있다. 손가락을 움직이는 동작은 단순한 행동에 불과한 것이 아니라 어휘 기억 장치의 문을 여는 열쇠와 같은 역할을 한다. 그러므로 손가락이 불편한 사람들은 평소보다 필요한 단어를 떠올리는 시간이 길어진다. 말을 잘하기 위해서 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 조언하는 것도 이런 이유 때문이다.</p> -->
+		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
 	<!-- </div> -->
 	<!-- <ol> -->
 		<!-- <li></li> -->
@@ -260,23 +381,9 @@
 	<!-- <h4>18.</h4> -->
 	<!-- <ul> -->
 		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
-		<!-- <p>원래 악수는 상대를 안심시키기 위한 행동이었다. 중세 시대의 기사들은 칼과 같은 무기를 가지고 다니다가 적과 싸울 때 꺼내 들었다. 하지만 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 때에는 악수를 하면서 손에 무기가 없음을 보여 주었다. 이렇게 안전을 확인시켜 주기 위한 행동이 오늘날에는 반가움과 존중을 표시하는 인사법이 되었다.</p> -->
+		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
 	<!-- </div> -->
 	<!-- <ol> -->
 		<!-- <li></li> -->
@@ -290,22 +397,9 @@
 	<!-- <h3>[19~20]. 다음을 읽고 물음에 답하십시오.</h3> -->
 	<!-- <ul> -->
 		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
-		<!-- <p>흥미와 재미 요소를 내세워 홍보하는 마케팅 전략이 주목받고 있다. 이런 마케팅은 소비자의 호기심을 자극해 구매로 이어지게 한다. 그러나 제품의 품질이 소비자의 기대에 미치지 못하는 경우 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 브랜드 이미지까지 나빠지기도 한다. 실제로 한 햄버거 회사에서 '주머니 버거', '눌러 먹는 버거'를 만들어 소비자의 관심을 끌었지만 품질이 기대에 못 미치자 회사의 다른 제품까지 판매가 감소한 경우가 있었다.</p> -->
+		<!-- <p>(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p> -->
 	<!-- </div> -->
 	<!-- <h4>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4> -->
 	<!-- <ol> -->
