--- a/uj/zajecia/24-25l/ljk5/testy/czytanie/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/testy/czytanie/3/index.html
@@ -105,8 +105,8 @@
 	</div>
 	<ol>
 		<li>형식적 몸짓으로</li>
-		<li>집단적 의식으로</li>
-		<li>다양한 모습으로 <strong class="correct">✓</strong></li>
+		<li>집단적 의식으로 <strong class="correct">✓</strong></li>
+		<li>다양한 모습으로</li>
 		<li>발전적인 미래로</li>
 	</ol>
 
